# cpp_boilerplate

./: .gitignore  CMakeLists.txt  old_makefile  readme.md
cmake/Modules/: FindLpSolve.cmake  GitHash.cmake
data/: .gitignore  load.csv
include/: CommandLineParsing.hpp  GitHash.hpp  bar.h  foo.h  sample2.h
src/: bar.cpp  foo.cpp  main.cpp  sample2.cpp
tests/: CMakeLists.txt  hello_test.cpp
